welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:2: error: value pour is not a member of java.awt.Color
Color.PINK pour le rose
           ^FlowerPot:38: error: value Orange is not a member of object java.awt.Color
	fleur(Color.Orange);
                    ^