welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
Color.PINK pour le rose
Color.ORANGE pour le orange

def marqueSol(c: Color) {
	setCouleurBrosse(c);baisseBrosse();leveBrosse();
}

def fleur(c: Color) {
	marqueSol(c);
	avance();
	marqueSol(Color.yellow);
	droite();
	avance();
	marqueSol(c);
	recule();
	recule();
	marqueSol(c);
	avance();
	gauche();
	avance();
	marqueSol(c);
}

def growFlowers() {
	fleur(Color.red);
	avance();
	avance();
	fleur(Color.cyan);
	droite();
	for (i <- 1 to 4) {avance()};
	gauche();
	fleur(Color.green);
	for (i <- 1 to 2) {recule()};
	gauche();
	for (i <- 1 to 2) {avance()};
	droite();
	fleur(Color.Orange);
	for (i <- 1 to 2) {recule()};
	droite();
	for (i <- 1 to 2) {avance()};
	gauche();
	fleur(Color.pink);
	recule();
	recule();
}
